kubernetes/apps/flux-system/add-ons/app/webhooks/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
spec:
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress-ext.trentscholl.com
  className: "external-nginx"
  rules:
    - host: &host flux-webhook.trentscholl.com
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - *host
